cours et exercices

--- a/Cours/1. Installation du poste de travail.md
+++ b/Cours/1. Installation du poste de travail.md
@@ -45,6 +45,7 @@ ___
 - Télécharger [Obsidian](https://obsidian.md) et installez-le normalement sur votre PC.
 - Une fois Obsidian ouvert, créer un coffre à l'emplacement de votre choix.
 - Cliquer sur l'icône "engrenage" en bas à gauche de l'écran et aller sur l'onglet "Plugins de la communauté".
+- Turn on les commun
 - Installer les plugins suivants :
   - Execute Code
   - Editor Syntax Highlight
