refactor: changement des noms de fichiers :zap::memo:

--- a/Cours/10. Formatter les chaînes de caractères.md
+++ b/Cours/10. Formatter les chaînes de caractères.md
@@ -142,4 +142,4 @@ print("Je concatene " + str(x) + " et " + str(y) + " avec +, quel plaisir.")
 
 <br>
 
-[Exercices](Exercices%20-%20Formater%20des%20chaînes%20de%20caractères.md)
+[Exercices](Exercices%20-%2010.%20Formater%20des%20chaînes%20de%20caractères.md)
