--- a/Cours/11. Les structures conditionnelles.md
+++ b/Cours/11. Les structures conditionnelles.md
@@ -170,4 +170,4 @@ for coord in coords:
 
 <br>
 
-[Exercices](Exercices%20-%20Les%20structures%20conditionnelles.md)
+[Exercices](Exercices%20-%2011.%20Les%20structures%20conditionnelles.md)
