--- a/Cours/12. Les modules standards de Python.md
+++ b/Cours/12. Les modules standards de Python.md
@@ -103,4 +103,4 @@ Pour créer son propre module il suffit de créer un nouveau fichier python. Dan
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20modules%20Python.md)
+[Exercices](Exercices%20-%2012.%20Les%20modules%20Python.md)
