--- a/Cours/13. Les listes.md
+++ b/Cours/13. Les listes.md
@@ -154,4 +154,4 @@ print(list(test_range)) # [1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20listes.md)
+[Exercices](Exercices%20-%2013.%20Les%20listes.md)
