--- a/Cours/16. Les boucles.md
+++ b/Cours/16. Les boucles.md
@@ -193,4 +193,4 @@ if any([x >= 10 for x in notes]):
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20boucles.md)
+[Exercices](Exercices%20-%2016.%20Les%20boucles.md)
