--- a/Cours/17. Les dictionnaires.md
+++ b/Cours/17. Les dictionnaires.md
@@ -193,4 +193,4 @@ print(dict(sorted_dict))
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20dictionnaires.md)
+[Exercices](Exercices%20-%2017.%20Les%20dictionnaires.md)
