--- a/Cours/18. Les sets.md
+++ b/Cours/18. Les sets.md
@@ -61,4 +61,4 @@ print(union) # {'rhubarbe', 'kaki', 'orange', 'banane', 'poire', 'pomme'}
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20sets.md)
+[Exercices](Exercices%20-%2018.%20Les%20sets.md)
