--- a/Cours/19. Les fonctions.md
+++ b/Cours/19. Les fonctions.md
@@ -225,4 +225,4 @@ print(binary_search(liste, 0, len(liste) - 1, 30))
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20fonctions.md)
+[Exercices](Exercices%20-%2019.%20Les%20fonctions.md)
