--- a/Cours/7. Interaction avec l'utilisateur.md
+++ b/Cours/7. Interaction avec l'utilisateur.md
@@ -15,4 +15,4 @@ print(nombre)
 
 <br>
 
-[Exercices](Exercices%20-%20Intéraction%20avec%20l'utilisateur.md)
+[Exercices](Exercices%20-%207.%20Intéraction%20avec%20l'utilisateur.md)
