--- a/Cours/8. Les méthodes de chaînes de caractères.md
+++ b/Cours/8. Les méthodes de chaînes de caractères.md
@@ -153,4 +153,4 @@ help('str.join')
 > Liste exhaustive des fonctions de string en python [ici](Liste%20des%20méthodes%20de%20string.md)
 
 
-[Exercices](../Exercices/Exercices%20-%20Manipulation%20de%20chaînes.md)
+[Exercices](Exercices%20-%208.%20Manipulation%20de%20chaînes.md)
