--- a/Cours/9. Les opérateurs mathématiques.md
+++ b/Cours/9. Les opérateurs mathématiques.md
@@ -43,10 +43,10 @@ L'opérateur d'assignation peut être couplé à un opérateur mathématique.
 
 ```python
 x = 3
-x += 1 # ajoute 1 à x
+x += 1 # ajoute 1 à x  -- x = x + 1 
 
-x *= 3 # multiplie x par 3
-x /= 2 # divise x par 2
+x *= 3 # multiplie x par 3  -- x = x * 3
+x /= 2 # divise x par 2  -- x = x / 2
 
 print(x)
 ```
