--- a/Cours/6. Les variables.md
+++ b/Cours/6. Les variables.md
@@ -109,4 +109,4 @@ Par ailleurs, il existe une **convention** parmi les développeurs python s'agis
 
 <br>
 
-[Exercices](../Exercices/Exercices%20-%20Les%20variables.md)
+[Exercices](Exercices%20-%206.%20Les%20variables.md)
