--- a/Cours/13. Les listes.md
+++ b/Cours/13. Les listes.md
@@ -75,6 +75,16 @@ Les slices permettent de sortir une sous-partie d'une liste. Elle peut regrouper
 ```python
 ma_liste = [1, 2, 3, 4, 5, 6]
 
+print(ma_liste[0])   # [1]
+
+
+
+
+
+
+
+
+
 print(ma_liste[3:5])   # [4, 5]
 print(ma_liste[:2])    # [1, 2]
 print(ma_liste[2:-1])  # [3, 4, 5]
