--- a/Cours/23. La programmation orientée objet - Introduction.md
+++ b/Cours/23. La programmation orientée objet - Introduction.md
@@ -33,9 +33,11 @@ class User:
 		self.nom    = nom
 		self.prenom = prenom
 
-user = User("Lama", "Serges") # Appel de la méthode __init__
+user1 = User("Lama", "Serges") # Appel de la méthode __init__
+user2 = User("Robin", "Hotton") # Appel de la méthode __init__
 
-print(user.nom)
+print(user1.nom)
+print(user2.nom)
 ```
 
 >  **`__init__(self, propriete_1, propriete_2, ...) ->`** La méthode constructeur qui est appelée à chaque fois qu'on instancie la classe.
@@ -86,7 +88,7 @@ class User:
 		self.prenom = prenom
 
 	# Méthode appelable depuis tous les objets
-	def get_full_name(self):
+	def get_full_name(self) -> None:
 		print(f"{self.nom.upper()} {self.prenom.capitalize()}")
 
 	# Méthode de classe (statique), self n'est pas en paramètre
@@ -121,7 +123,9 @@ class User:
 		self.prenom = prenom
 
 		User.nombre_instance += 1
-
+	def __str__(self):
+		return f"Coucou"
+		
 # Avec la dataclass
 from dataclasses import dataclass
 from typing import ClassVar
@@ -173,13 +177,18 @@ class User:
 
 	# Contrairement à une méthode statique, la classe doit être en paramètre
 	@classmethod
-	def create_zizou(cls):
-		return cls("Zidane", "Zinédine")
+	def create_zizou(cls, nom):
+		if "zidane" == nom:
+			return cls("Zidane", "Zinédine")
+		elif "ribery" == nom:
+			return cls("ribery", "")
 
 
 zizou = User.create_zizou()
+zizou2 = User("Zidane", "Zinédine")
 
 print(zizou.__dict__)
+print(zizou2.__dict__)
 ```
 
 <br>
@@ -199,7 +208,7 @@ class User:
 	def __str__(self):
 		return f"Utilisateur {self.nom.upper()} {self.prenom.capitalize()}"
 
-johnny = User("Halliday", "Johnny")
+johnny = User("Halliday", "johnny")
 print(johnny)
 ```
 
@@ -214,11 +223,13 @@ class Youtuber:
 	def __eq__(self, other):
 		return self.nb_abonnes == other.nb_abonnes
 
-squeezie = Youtuber("Squeezie", 10_000_000)
+squeezie = Youtuber("Squeezie", 10000000)
 zerator  = Youtuber("Zerator", 10_000_000)
 killer   = Youtuber("killerdu38", 12)
 
 print(squeezie == zerator)
+# print(squeezie == zerator == killer) # False
+# print(squeezie == zerator and squeezie == killer and zerator == killer)
 print(zerator == killer)
 ```
 
