--- a/Cours/24. La programmation orientée objet - Concepts avancés.md
+++ b/Cours/24. La programmation orientée objet - Concepts avancés.md
@@ -19,6 +19,7 @@ class Admin(User):
 		super().__init__(nom, prenom) # Appel du constructeur de la classe mère
 		self.admin = True
 
+user = User("Clooney", "Georges")
 admin = Admin("Clooney", "Georges")
 admin.get_full_name() # méthode de la classe mère accessible depuis la classe fille
 ```
@@ -139,4 +140,46 @@ Grâce à l'héritage, nous pouvons **hériter** de toutes les fonctionnalités 
 
 <br>
 
-[TP POO](../Exercices/TP%20POO.md)
+### L'Abstraction
+---
+
+L'**abstraction** permet de créer des classes abstraites en cachant les détails d'implémentation. Cette approche permet de gérer la complexité des systèmes logiciels en se concentrant sur ce qu'un objet fait plutôt que sur comment il le fait. L'abstraction est essentielle pour créer une architecture logicielle claire, modulaire et facile à maintenir.
+
+<br>
+
+Python ne propose par de classe abstraite *stricto sensu*, mais il propose le module `abc` (Abstract Base Classes) qui permet une telle implémentation. 
+
+Une classe abstraite est une classe qui ne peut pas être instanciée directement, mais qui sert de modèle pour d'autres classes concrètes. Elle définit des méthodes abstraites que les classes filles doivent implémenter.
+
+```python
+from abc import ABC, abstractmethod
+
+class Utilisateur(ABC):
+    def __init__(self, nom, prenom):
+        self.nom = nom
+        self.prenom = prenom
+
+    @abstractmethod
+    def afficher_nom_complet(self):
+        pass
+
+class Admin(Utilisateur):
+    def afficher_nom_complet(self):
+        return f"Administrateur {self.nom.upper()} {self.prenom.capitalize()}"
+
+
+# Exemples d'utilisation
+admin = Admin("Clooney", "Georges")
+print(admin.afficher_nom_complet())  # "Administrateur CLOONEY Georges"
+```
+
+L'utilisation de l'abstraction et de la surcharge se ressemblent beaucoup.
+
+L'idée fondamentale de l'abstraction est d'empêcher l'instanciation d'une classe et d'exiger l'implémentation de méthodes abstraites, créant ainsi un contrat que les classes filles doivent respecter. Cela garantit que chaque classe fille fournira une implémentation spécifique de ces méthodes, mais cela ne modifie pas le comportement des méthodes héritées de la classe mère.
+
+En revanche, la surcharge consiste à redéfinir une méthode existante dans la classe fille pour modifier son comportement. Cela permet à la classe fille de personnaliser ou d'étendre le comportement hérité de la classe mère sans nécessairement ajouter de nouvelles méthodes abstraites.
+
+> [!INFO] les interfaces
+> Concept que l'on ne retrouve pas en python.
+> 
+> Le meilleur mot pour le représenter est un contrat car tous les attributs et les méthodes des interfaces sont abstraites.
