--- a/Cours/25. Les design pattern.md
+++ b/Cours/25. Les design pattern.md
@@ -1,3 +1,10 @@
+*Patron de conception en français, c'est une solution générique à un problème de conception récurrent.*
+
+> [!TIP] [Liste exhaustive des design pattern](https://refactoring.guru/fr/design-patterns/catalog)
+> 
+> Il y a même des exemple d'utilisation et d'implémentation dans différents langages.
+<br>
+
 ### Singleton
 ---
 
@@ -58,9 +65,6 @@ class AudioPlayer:
 ```
 
 > Implémentation des états
-
-Python ne propose par de classe abstraite *stricto sensu*, mais il propose le module `abc` qui permet une telle implémentation.
-
 ```python
 from abc import abstractmethod, ABC  
   
@@ -116,3 +120,7 @@ class LockedState(State):
 	def click_previous(self):  
 		pass
 ```
+
+<br>
+
+[TP POO](../Exercices/TP%20POO.md)
