--- a/Cours/0. Introduction à python.md
+++ b/Cours/0. Introduction à python.md
@@ -8,4 +8,4 @@ Python présente de nombreux points forts :
 - **Bibliothèques Puissantes :** Python offre un écosystème riche de bibliothèques telles que NumPy pour les mathématiques, Django pour le développement web, et TensorFlow pour l'intelligence artificielle.
 - **Multiplateforme :** Il est compatible avec différentes plateformes, ce qui permet aux développeurs de travailler sur différents systèmes d'exploitation.
 
-Python est un langage populaire qui a su gagner en polyvalence et en adoption, et qui continue de gagner en popularité au fil des années, notamment dans la sphère de la data science et des mathématiques."
+Python est un langage populaire qui a su gagner en polyvalence et en adoption, et qui continue de gagner en popularité au fil des années, notamment dans la sphère de la data science, des mathématiques et de l'IA."
