--- a/Cours/26. Concepts et principes de programmation.md
+++ b/Cours/26. Concepts et principes de programmation.md
@@ -1,5 +1,5 @@
 1. **SOLID**
-	**<font color="red">S</font> (Single Responsibility Principle)** :  Une classe devrait avoir une seule raison de changer.
+	**<font color="red">S</font> (Single Responsibility Principle)** :  Une classe devrait avoir une seule raison d'être.
 	**<font color="red">O</font> (Open/Closed Principle)** : Les entités logicielles doivent être ouvertes à l'extension mais fermées à la modification.
 	**<font color="red">L</font> (Liskov Substitution Principle)** : Les objets d'une classe dérivée doivent être substituables pour ceux de la classe de base.
 	**<font color="red">I</font> (Interface Segregation Principle)** : Les interfaces ne devraient pas être surchargées de méthodes inutiles.
