--- a/Cours/23. La programmation orientée objet - Introduction.md
+++ b/Cours/23. La programmation orientée objet - Introduction.md
@@ -112,7 +112,7 @@ User.get_instance_count()
 ### Les dataclasses
 ---
 
-Les dataclasses sont une nouveauté de Python 3.7 et permettent d'économiser les lignes de code lors de la création d'une classe et de son constructeur.
+Les dataclasses sont une nouveauté de Python 3.7 et sont des classes spéciale introduite dans le module `dataclasses` qui permet de simplifier la création de classes principalement destinées à stocker des données.
 
 ```python
 # Création d'une classe sans dataclass
@@ -146,7 +146,9 @@ data = UserDataclass("Fabian", "Lara")
 print(data)
 ```
 
-En privilégiant les `dataclass` on s'économise beaucoup de code et notament celui du constructeur. Par ailleurs, les méthodes magiques telles que `__repr__`, et `__str__` sont aussi écrites par défaut. Nous le voyons dans l'exemple précédent, le print de l'objet `User` est bien moins intelligible que le print de l'objet `UserDataClass`.
+En privilégiant les `dataclass` on s'économise beaucoup de code et notamment celui du constructeur. Par ailleurs, les méthodes magiques telles que `__repr__`,  `__str__` , `__eq__` et d'autres sont aussi écrites par défaut. 
+
+Nous le voyons dans l'exemple précédent, le print de l'objet `User` est bien moins intelligible que le print de l'objet `UserDataClass`.
 
 >On peut aussi réécrire la méthode `__str__` afin d'avoir un affichage personnalisé
 
