--- a/Cours/23. La programmation orientée objet - Introduction.md
+++ b/Cours/23. La programmation orientée objet - Introduction.md
@@ -179,11 +179,8 @@ class User:
 
 	# Contrairement à une méthode statique, la classe doit être en paramètre
 	@classmethod
-	def create_zizou(cls, nom):
-		if "zidane" == nom:
-			return cls("Zidane", "Zinédine")
-		elif "ribery" == nom:
-			return cls("ribery", "")
+	def create_zizou(cls):
+		return cls("Zidane", "Zinédine")
 
 
 zizou = User.create_zizou()
