--- a/Cours/20. Les différentes documentations.md
+++ b/Cours/20. Les différentes documentations.md
@@ -140,3 +140,83 @@ Bien que ce ne soit pas une forme de documentation explicite, l'annotation de ty
 def addition(a: int, b: int) -> int:
     return a + b
 ```
+
+<br>
+
+### Structure de documentation de fichier
+
+---
+
+Les `${variable}` représentent les informations à changer.
+
+Il est possible de faire un fichier de configuration `.env` à la racine du projet pour chaque personne qui travail sur le projet est d'importer les informations.
+
+```python
+"""
+Titre : Documentation fichier Python
+Nom du projet : ${PROJECT_NAME}
+
+Nom du fichier : ${NAME}
+
+Date de la dernière révision : ${MONTH_NAME_FULL},${YEAR},${MONTH},${DAY},${TIME}
+
+Auteur(s) : Prenom NOM
+Auteur(s) : ${USER}
+
+IDE utilisé : ${PRODUCT_NAME}
+
+Client : e-learning
+
+#-------------------------------------------------
+
+name='$Package_name',
+    version='$Version',
+    packages=$PackageList,$PackageDirs
+    url='$URL',
+    license='$License',
+    author='$Author',
+    author_email='$Author_Email',
+    description='$Description'
+
+#-------------------------------------------------
+
+Fichiers du projet :
+                    -   Lab1_4.py
+"""
+
+# Indispensable hors contexte de PyCharm->en bas à droite
+# -*- coding:Utf-8 -*-
+
+################################################
+#               Programme principal
+################################################
+
+#-----------------------------------------------
+#           Zone des 'imports' de modules
+#-----------------------------------------------
+
+
+
+#----------------------------------------------------
+#       Zone de déclaration des variables 'globales'
+#----------------------------------------------------
+
+
+
+#-------------------------------------------------------
+#       Zone de déclaration des modules ou des fonctions
+#-------------------------------------------------------
+
+
+
+#-------------------------------------------------------
+#                       PROGRAMME
+#-------------------------------------------------------
+
+
+
+```
+
+<br>
+
+[Documentation de projet](Annexes/Documentations%20de%20projet.md)
