--- a/Cours/21. Les annotations de type.md
+++ b/Cours/21. Les annotations de type.md
@@ -1,12 +1,47 @@
-### Annotation de Type en Python
+### Introduction
 
 ---
 
-Python est un langage typé dynamiquement, ce qui signifie que les types sont associés aux valeurs au moment de l'exécution, mais l'annotation de type permet d'introduire une forme de typage statique facultatif pour améliorer la qualité et la lisibilité du code.
+Python étant un langage **interprété**, il est typé dynamiquement. Ce qui signifie que les types sont associés aux valeurs au moment de l'exécution, mais l'annotation de type permet d'introduire une forme de typage statique facultatif pour améliorer la qualité et la lisibilité du code. Cette pratique augmente considérablement la qualité et la lisibilité de votre code, et est donc une pratique répandue en milieu professionnel.
 
 Les type sont associés aux variables, aux paramètres de fonction et aux valeurs de retour.
 
-Elle n'affecte pas l'exécution du code, mais elle peut être utilisée par des outils et des IDE pour détecter des erreurs potentielles et améliorer la documentation du code.
+```python
+# On précise ici qu'on attend deux integers, et que la fonction retourne un integer
+def add(a: int, b: int) -> int:
+	return a + b
+
+x: int = 4
+y: int = 8
+z: str = "coucou"
+
+print(add(x, y))
+print(add(x, z)) # soulévera une erreur explicite
+```
+
+Elle n'affecte pas l'exécution du code, mais elle peut être utilisée par des outils et des IDE pour détecter des erreurs potentielles et améliorer la documentation du code. Elle permet aussi de profiter de l'auto-complétions dans la plupart des IDE modernes facilitant grandement le développement et empêchant un bon nombre de bugs.
+
+<br>
+
+### Nouveautés de la 3.10
+---
+
+Depuis la toute récente 3.10, les annotations de types ont été améliorées.
+
+```python
+# Synthaxe avant 3.10
+from typing import Union
+ma_liste: list[Union[int, str]] = [2, "coucou", 1, 76, "test"]
+
+# 3.10: choisir plusieurs types possibles avec l'opérateur | (pipe)
+ma_liste: list[int | str] = [2, "coucou", 1, 76, "test"]
+
+# Aliasing de type
+Nombre = int | float 
+
+def addition(a: Nombre, b: Nombre) -> Nombre: 
+	return a + b
+```
 
 <br>
 
@@ -132,14 +167,3 @@ Vous pouvez annoter le type de l'objet créé avec cette classe comme suit :
 def creer_personne(nom: str, age: int) -> Personne:
     return Personne(nom, age)
 ```
-
-<br>
-
-### Avantages de l'Annotation de Type
-
----
-
-- Amélioration de la documentation du code en spécifiant clairement les types attendus.
-- Détection plus rapide d'erreurs de typage lors de la vérification statique du code.
-- Amélioration de la complétion automatique et de l'aide contextuelle dans les IDE.
-- Facilité de maintenance du code grâce à une meilleure compréhension des types de données.
