--- a/Cours/22. Les modules.md
+++ b/Cours/22. Les modules.md
@@ -1,8 +1,38 @@
+_[Pypi](https://pypi.org) est un site qui propose un catalogue exhaustif des modules créés par la communauté Python afin d'étendre ses fonctionnalités._
+
+<br>
+
 ### Définition de Module
 
 ---
 
 Un **module** en Python est un fichier contenant des déclarations et des définitions de fonctions, de classes, de variables et d'instructions. Ces éléments peuvent être réutilisés dans d'autres programmes Python. Les modules sont une manière efficace d'organiser et de structurer le code pour le rendre plus lisible et réutilisable.
+
+<br>
+
+### Installer un package avec pip
+---
+
+Pour installer un package avec pip sur le terminal, il suffit de rentrer la commande suivante.
+
+```shell
+pip install nom_du_package
+```
+
+Pour obtenir la liste des modules installés :
+
+```shell
+pip list
+```
+
+<br>
+
+### Désinstaller un package
+---
+
+```shell
+pip uninstall nom_du_package 
+```
 
 <br>
 
@@ -167,3 +197,7 @@ Les expressions régulières utilisent des **métacaractères** pour définir de
 | [`re.sub(pattern, repl, string)`](https://docs.python.org/3/library/re.html#re.sub)   | Remplace les occurrences de `pattern` par `repl` dans `string`.           |
 | [`re.compile(pattern)`](https://docs.python.org/3/library/re.html#re.compile)         | Compile un modèle d'expression régulière pour une utilisation ultérieure. |
 | [`re.split(pattern, string)`](https://docs.python.org/3/library/re.html#re.split)     | Divise `string` en une liste en utilisant `pattern` comme séparateur.     |
+
+<br>
+
+[TP Impératif](TP%20Impératif.md)
