--- a/Cours/26. Concepts et principes de programmation.md
+++ b/Cours/26. Concepts et principes de programmation.md
@@ -7,7 +7,8 @@
 
 <br>
 
-2. **KISS (Keep It Simple, Stupid)** : On préconise la simplicité dans la conception et l'écriture du code. Il s'agit de garder les choses aussi simples que possible plutôt que de les complexifier inutilement.
+2. **KISS (Keep It Simple, Stupid)** : On préconise la simplicité dans la conception et l'écriture du code.
+   Il s'agit de garder les choses aussi simples que possible plutôt que de les complexifier inutilement.
 
 <br>
 
