--- a/Cours/28. Les fichiers.md
+++ b/Cours/28. Les fichiers.md
@@ -29,6 +29,7 @@ Pour créer un nouveau fichier en Python, vous pouvez utiliser la fonction `open
 
 ```python
 nouveau_fichier = open("nouveau_fichier.txt", "w")
+print(nouveau_fichier)
 ```
 
 <br>
