--- a/Cours/29. Le CSV.md
+++ b/Cours/29. Le CSV.md
@@ -82,6 +82,8 @@ with open('donnees.csv', mode='r') as fichier_csv:
 
 Après avoir ouvert le fichier CSV en mode d'écriture, vous pouvez écrire des données dans le fichier.
 
+Si le fichier dans lequel vous essayez d'écrire n'existe pas, alors il sera créé à la volet.
+
 > avec writer
 
 ```python
