--- a/Cours/25. La programmation orientée objet - Introduction.md
+++ b/Cours/25. La programmation orientée objet - Introduction.md
@@ -48,6 +48,31 @@ Le constructeur permet de mettre en paramètre la **valeur des propriétés** qu
 
 <br>
 
+### Les méthodes
+
+---
+
+Les **méthodes** sont des fonctions définies dans la classe, et qui seront partagées par tous les objets issus de cette classe.
+
+```python
+class User:  
+    def __init__(self, nom: str, prenom: str):  
+        self.nom = nom  
+        self.prenom = prenom  
+
+	# Méthode appelable depuis tous les objets
+    def get_full_name(self):  
+        print(f"Utilisateur {self.nom.upper()} {self.prenom.capitalize()}")  
+
+user1 = User("Doe", "john")
+user2 = User("Hotton", "Robin")
+  
+print(user1.get_full_name())  # ici on doit print car la methode renvoie
+print(user2.get_full_name())  # une chaine de caractère.
+```
+
+<br>
+
 ### Les propriétés statiques
 ---
 
@@ -56,38 +81,39 @@ Les propriétés et méthodes d'une classe sont partagées entre tous les objets
 Par exemple, grâce à une propriété statique, on va pouvoir compter le nombre d'instance d'une classe.
 
 ```python
-class User:
-	nombre_instance = 0 # Propriété statique de la classe
-	def __init__(self, nom: str, prenom: str):
-		User.nombre_instance += 1 # nombre_instance appartient à User, pas à self
-		
-		self.nom    = nom
-		self.prenom = prenom
+class User:  
+    nombre_instance = 0  # Propriété statique de la classe  
+  
+    def __init__(self, nom: str, prenom: str):  
+        User.nombre_instance += 1  # nombre_instance appartient à User, pas à self  
+        self.nom = nom  
+        self.prenom = prenom  
 
-serges = User("Lama", "Serges")    # User.nombre_instance += 1
-alain  = User("Souchon", "Alain")  # User.nombre_instance += 1
-henry  = User("Salvador", "Henry") # User.nombre_instance += 1
-
+    def get_full_name(self):  
+        print(f"Utilisateur {self.nom.upper()} {self.prenom.capitalize()}")  
+  
+user1 = User("Doe", "john")  # User.nombre_instance += 1  
+user2 = User("Hotton", "Robin")  # User.nombre_instance += 1  
+  
 print(User.nombre_instance)
 ```
 
 <br>
 
-### Les méthodes
+### Les méthodes statiques
 ---
 
-Les **méthodes** sont des fonctions définies dans la classe, et qui seront partagées par tous les objets issus de cette classe. Tout comme les propriétés, **les méthodes peuvent être statiques** grâce au décorateur `@staticmethod`.
+Tout comme les propriétés, **les méthodes peuvent être statiques** grâce au décorateur `@staticmethod`.
 
 ```python
 class User:
-	nombre_instance = 0 # Propriété statique de la classe
+	nombre_instance = 0
 	def __init__(self, nom: str, prenom: str):
-		User.nombre_instance += 1 # nombre_instance appartient à User, pas à self
-		
+		User.nombre_instance += 1
 		self.nom    = nom
 		self.prenom = prenom
 
-	# Méthode appelable depuis tous les objets
+
 	def get_full_name(self) -> None:
 		print(f"{self.nom.upper()} {self.prenom.capitalize()}")
 
@@ -98,59 +124,14 @@ class User:
 		print(f"Le nombre d'instance est {User.nombre_instance}")
 
 
-patricia = User("Kaas", "Patricia")
-patricia.get_full_name()  # On appelle la méthode d'objet depuis l'objet
+john = User("Doe", "john")
+john.get_full_name()  # On appelle la méthode d'objet depuis l'objet
 User.get_instance_count() # On appelle la méthode statique depuis la classe
 
-etienne = User("Daho", "Étienne")
-etienne.get_full_name()
+robin = User("Hotton", "Robin")
+robin.get_full_name()
 User.get_instance_count()
 ```
-
-<br>
-
-### Les dataclasses
----
-
-Les dataclasses sont une nouveauté de Python 3.7 et sont des classes spéciale introduite dans le module `dataclasses` qui permet de simplifier la création de classes principalement destinées à stocker des données.
-
-```python
-# Création d'une classe sans dataclass
-class User:
-	nombre_instance = 0
-	def __init__(self, nom: str, prenom: str):
-		self.nom    = nom
-		self.prenom = prenom
-
-		User.nombre_instance += 1
-	def __str__(self):
-		return f"Coucou"
-		
-# Avec la dataclass
-from dataclasses import dataclass
-from typing import ClassVar
-
-@dataclass
-class UserDataclass:
-	nom: str
-	prenom: str
-	nombre_instance: ClassVar[int] = 0 # ClassVar: propriété de classe
-
-	def __post_init__(self): # Méthode appelée après la construction de l'objet
-		UserDataclass.nombre_instance += 1
-
-user = User("Moustaki", "Georges")
-print(user) # méthode magique __str__ appelée
-
-data = UserDataclass("Fabian", "Lara")
-print(data)
-```
-
-En privilégiant les `dataclass` on s'économise beaucoup de code et notamment celui du constructeur. Par ailleurs, les méthodes magiques telles que `__repr__`,  `__str__` , `__eq__` et d'autres sont aussi écrites par défaut. 
-
-Nous le voyons dans l'exemple précédent, le print de l'objet `User` est bien moins intelligible que le print de l'objet `UserDataClass`.
-
->On peut aussi réécrire la méthode `__str__` afin d'avoir un affichage personnalisé
 
 <br>
 
