--- a/Cours/26. Les Dataclasses.md
+++ b/Cours/26. Les Dataclasses.md
@@ -1,5 +1,7 @@
 Les dataclasses sont une nouveauté de Python 3.7 et sont des classes spéciale introduite dans le module `dataclasses` qui permet de simplifier la création de classes principalement destinées à stocker des données.
 
+Les dataclasses sont principalement conçues pour simplifier la création de classes de données immuables, et elles génèrent automatiquement des méthodes spéciales, telles que `__init__`, `__repr__`, et `__eq__`, pour vous.
+
 ```python
 # Création d'une classe sans dataclass
 class User:
@@ -29,8 +31,6 @@ print(user) # méthode magique __str__ appelée
 data = UserDataclass("Fabian", "Lara")
 print(data)
 ```
-
-En privilégiant les `dataclass` on s'économise beaucoup de code et notamment celui du constructeur. Par ailleurs, les méthodes magiques telles que `__repr__`,  `__str__` , `__eq__` et d'autres sont aussi écrites par défaut. 
 
 Nous le voyons dans l'exemple précédent, le print de l'objet `User` est bien moins intelligible que le print de l'objet `UserDataClass`.
 
