--- a/Cours/a. Impératif/21. Les différentes documentations.md
+++ b/Cours/a. Impératif/21. Les différentes documentations.md
@@ -219,4 +219,4 @@ Fichiers du projet :
 
 <br>
 
-[Documentation de projet](Annexes/Documentations%20de%20projet.md)
+[Documentation de projet](Documentations%20de%20projet.md)
