update cours bdd

--- a/Cours/c. Connexion BDD/4. SQLAlchemy - Relation des tables.md
+++ b/Cours/c. Connexion BDD/4. SQLAlchemy - Relation des tables.md
@@ -70,8 +70,7 @@ class Child(Base):
 
 - bi-directionnel et nullable  (python 3.10)
 ```python
-from __future__ import annotations
-
+# from __future__ import annotations
 
 class Parent(Base):
     __tablename__ = "parent_table"
