--- a/Cours/c. Connexion BDD/3. SQLAlchemy - Introduction.md
+++ b/Cours/c. Connexion BDD/3. SQLAlchemy - Introduction.md
@@ -134,7 +134,7 @@ from sqlalchemy import select
 
 # récupération
 stmt = select(User).where(User.name == "patrick")
-patrick = session.scalars(stmt).one()Q
+patrick = session.scalars(stmt).one()
 
 # modification
 patrick.addresses.append(Address(email_address="patrickstar@sqlalchemy.org"))
