--- a/Cours/c. Connexion BDD/4. SQLAlchemy - Relation des tables.md
+++ b/Cours/c. Connexion BDD/4. SQLAlchemy - Relation des tables.md
@@ -174,7 +174,7 @@ class Association(Base):
     right_id: Mapped[int] = mapped_column(
         ForeignKey("right_table.id"), primary_key=True
     )
-    extra_data: Mapped[Optional[str]]
+    extra_data: Mapped[Optional[str]] = mapped_column(String(50))
 
     # association between Assocation -> Child
     child: Mapped["Child"] = relationship(back_populates="parent_associations")
