tests renommage + annexes

--- a/Cours/d. Tests/2. Cours tests unitaire.md
+++ b/Cours/d. Tests/2. Cours tests unitaire.md
@@ -33,6 +33,8 @@ class TestAddition(unittest.TestCase):
 La classe `TestAddition` hérite de `unittest.TestCase`.
 La méthode `test_addition` utilise `assertEqual` pour vérifier les résultats.
 
+On va pouvoir tester notre code grâce à `unittest.main()` que l'on mettra en bas du fichier python. Cela lancera l'automatisation de tests.
+
 ### **Avantages des Tests Unitaires**
 
 - **Détection Précoce des Erreurs** : Les tests unitaires identifient les erreurs dès le début du processus de développement, ce qui facilite leur correction avant qu'elles ne deviennent des problèmes majeurs.
@@ -47,7 +49,7 @@ La méthode `test_addition` utilise `assertEqual` pour vérifier les résultats.
 - **Maintenir une Couverture de Code Adéquate** : _S'assurer que la majorité du code est couverte par des tests unitaires pour maximiser la confiance dans la robustesse du logiciel._
 - **Exécution Fréquente des Tests** : _Les tests unitaires doivent être exécutés fréquemment, idéalement à chaque modification de code, pour assurer une détection rapide des erreurs._
 
-[Exercice Test]
+[[Exercice test unitaire]]
 
 <br>
 
