--- a/Cours/c. Connexion BDD/4. SQLAlchemy - Relation des tables.md
+++ b/Cours/c. Connexion BDD/4. SQLAlchemy - Relation des tables.md
@@ -3,6 +3,26 @@ Il existe plein de façon différentes de relier les tables entre elles avec des
 
 Pour passer de mono en bi-directionnel, il faut ajouter des `back_populates` sur l'attribut de la table ciblé.
 
+Le choix entre des relations unidirectionnelles (mono) et bidirectionnelles (bi) dans SQLAlchemy dépend des besoins spécifiques de votre application et de la manière dont vous prévoyez d'accéder et de manipuler les données.
+
+### Avantages et inconvénients
+
+1. **Relation Unidirectionnelle (Mono)**:
+   - **Avantages**:
+     - Plus simple et plus légère.
+     - Peut être suffisante si vous n'avez besoin que d'accéder à la relation depuis un seul côté.
+   - **Inconvénients**:
+     - Vous ne pouvez accéder aux relations que depuis un seul côté de la relation. Si vous avez besoin d'accéder aux objets des deux côtés, cela nécessite une autre relation.
+
+2. **Relation Bidirectionnelle (Bi)**:
+   - **Avantages**:
+     - Vous permet d'accéder à la relation depuis les deux côtés.
+     - Utile si vous avez besoin de naviguer facilement entre les objets liés.
+     - Possibilité d'ajouter des attributs supplémentaires à la relation (par exemple, des attributs de jointure).
+   - **Inconvénients**:
+     - Un peu plus complexe à configurer.
+     - Peut entraîner des mises à jour redondantes si toutes les modifications ne sont pas gérées correctement.
+
 <br>
 
 ## One to many
