--- a/Cours/e. api/1. Introduction et routes.md
+++ b/Cours/e. api/1. Introduction et routes.md
@@ -16,6 +16,12 @@ FastAPI est un framework web moderne conçu pour simplifier le développement d'
     
 5. **Intégration simple :** FastAPI s'intègre facilement avec d'autres bibliothèques Python populaires telles que SQLAlchemy, OAuth2, JWT, et bien d'autres, offrant ainsi une flexibilité totale pour répondre aux besoins spécifiques de votre application.
 
+> [!INFO] installation FastAPI
+> `pip install "fastapi[all]"`
+> 
+> le 'all' permet d'installer toutes les dépendances en plus des outils les plus utiliser par fastapi.
+
+
 <br>
 
 ## Routes
@@ -35,9 +41,11 @@ On peut utiliser ces méthodes avec FastAPI grâce a des annotations :
 
 
 > [!info] uvicorn
-> on va utiliser le module uvicorn afin de lancer notre application.
+> On va utiliser le module uvicorn afin de lancer notre application et le mettre accessible en localhost.
 > 
-> `uvicorn projet.main:app --reload`
+> `pip install uvicorn`
+> 
+> `uvicorn main:app --reload`
 
 <br>
 
@@ -180,3 +188,5 @@ item = {"item_id": item_id, "owner_id": user_id}
         item.update({"description": "This is an amazing item that has a long description"})
     return item
 ```
+
+[[Exercice route]]
