--- a/Cours/e. api/2. Les modifications.md
+++ b/Cours/e. api/2. Les modifications.md
@@ -18,8 +18,8 @@ class Item(BaseModel):
 app = FastAPI()
 
 @app.put("/items/{id}")
-def update_item(id: str, item: Item):
-    json_compatible_item_data = jsonable_encoder(item)
+def update_item(id: str, item_a_modifier: Item):
+    json_compatible_item_data = jsonable_encoder(item_a_modifier)
     fake_db[id] = json_compatible_item_data
 ```
 
@@ -67,8 +67,10 @@ Le PUT va être une modification entière, on remplacera la donnée entièrement
 async def update_item(item_id: int, item: Item):
     # Transforme l'objet "item" en format JSON compatible
     update_item_encoded = jsonable_encoder(item) 
+    
     # Remplace l'ancienne donnée par la nouvelle dans la base de données
     items[item_id] = update_item_encoded 
+    
     # Retourne au client la version mise à jour de l'objet
     return update_item_encoded
 
@@ -83,7 +85,6 @@ Avec patch on peut modifier seulement une partie des informations. C'est une mis
 async def update_item(item_id: int, item: Item):
     # Récupération de la donnée existante par son ID
     stored_item_data = items[item_id]
-
     # Conversion des données stockées en un objet Pydantic (schéma)
     stored_item_model = Item(**stored_item_data)
 
