--- a/f. Anaconda/Cours/2. Conda et minoconda.md
+++ b/f. Anaconda/Cours/2. Conda et minoconda.md
@@ -5,7 +5,7 @@ Il existe différentes façons d'aborder Python, chacune adaptée à des besoins
 - Un IDE, facilitant le débogage et le développement.
 - Jupyter (IDE sur un serveur en ligne), qui a un aspect plus interactif et visuel.
 
-![[different-coding-environment.png]]
+![[different-coding-environment.png]](academind)
 
 <br>
 
