--- a/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
+++ b/f. Anaconda/Exercices/5. Création de Dataframes avec Pandas.md
@@ -1,4 +1,4 @@
-## Exercice 1: Création d'une Dataframe à partir d'un Dictionnaire de Séries
+### Exercice 1: Création d'une Dataframe à partir d'un Dictionnaire de Séries
 
 ---
 
@@ -11,7 +11,7 @@ Considérez le cas où vous avez des notes d'étudiants pour différentes matiè
 
 <br>
 
-## Exercice 2: Exploration des Index et Colonnes d'une Dataframe
+### Exercice 2: Exploration des Index et Colonnes d'une Dataframe
 
 ---
 
@@ -22,7 +22,7 @@ En utilisant la Dataframe créée dans l'exercice précédent, explorez les éti
 
 <br>
 
-## Exercice 3: Création d'une Dataframe à partir d'un Dictionnaire de ndarray ou de Liste
+### Exercice 3: Création d'une Dataframe à partir d'un Dictionnaire de ndarray ou de Liste
 
 ---
 
@@ -34,7 +34,7 @@ Imaginez que vous ayez des informations sur les prénoms et les âges de personn
 
 <br>
 
-## Exercice 4: Exploration d'une Dataframe
+### Exercice 4: Exploration d'une Dataframe
 
 ---
 
