--- a/f. Anaconda/Exercices/8. Opérations Avancées avec Pandas.md
+++ b/f. Anaconda/Exercices/8. Opérations Avancées avec Pandas.md
@@ -1,22 +1,22 @@
-## Exercice 1: Opération de Filtrage
+### Exercice 1: Opération de Filtrage
 
 ---
 
-Considérez le DataFrame `df_notes` représentant les notes obtenues par des élèves dans différentes formations.
+Considérez le DataFrame `df_notes` représentant les notes obtenues par des étudiants dans différentes matières.
 
 ```python
 import pandas as pd
 
 df_notes = pd.DataFrame({
-	"Introduction au Big data": pd.Series([11.0, 15.0, 10.0,10.0],index=["Sylvie", "Gilles", "Sylvain", "Thomas"]),
-	"Hadoop": pd.Series([18.0, 20.0, 17.0,18.0], index=["Sylvie", "Gilles", "Sylvain", "Thomas"]),
-	"Spark": pd.Series([15.0, 7.0, 10.0,20.0],index=["Sylvie", "Gilles", "Sylvain", "Thomas"]),
-	"Java": pd.Series([18.0, 20.0, 10.0,8.0],index=["Sylvie", "Gilles", "Sylvain", "Thomas"]),
+    "Mathématiques": pd.Series([15, 18, 12, 14], index=["Sophie", "Alex", "Emma", "Lucas"]),
+    "Informatique": pd.Series([20, 14, 16, 18], index=["Sophie", "Alex", "Emma", "Lucas"]),
+    "Physique": pd.Series([18, 15, 14, 20], index=["Sophie", "Alex", "Emma", "Lucas"]),
+    "Chimie": pd.Series([16, 12, 10, 15], index=["Sophie", "Alex", "Emma", "Lucas"]),
 })
 
 # Effectuez les opérations de filtrage suivantes:
-# 1. Sélectionnez les étudiants ayant obtenu une note supérieure ou égale à 15 en Java.
-# 2. Sélectionnez les étudiants ayant une note supérieure ou égale à 15 en Java et une note supérieure ou égale à 10 en Spark.
+# 1. Sélectionnez les étudiants ayant obtenu une note supérieure ou égale à 18 en Physique.
+# 2. Sélectionnez les étudiants ayant une note supérieure ou égale à 15 en Chimie et une note supérieure ou égale à 16 en Informatique.
 # 3. Expérimentez avec d'autres opérations de filtrage.
 
 # Affichez les résultats de manière claire et compréhensible.
@@ -24,7 +24,7 @@ df_notes = pd.DataFrame({
 
 <br>
 
-## Exercice 2: Opération de Groupage
+### Exercice 2: Opération de Groupage
 
 ---
 
@@ -33,15 +33,16 @@ Considérez le DataFrame `df_universites` représentant les notes et les informa
 ```python
 import pandas as pd
 
-notes = {'Région': ['Nouvelle-Aquitaine','Normandie','Normandie', 'Ile-de-France','Ile-de-France','Grand Est','Grand Est','Grand Est'],
-'Université': ['Université de Poitiers','Université de Rouen','Université de Rouen', 'Université de Paris','Université de Paris','Université de Reims','Université de Reims','Université de Reims'],
-'Nom': ['Gilles','Laura','Sylvain',
-'Thomas','Sylvie','Luc','Marc','Hugo'], 'Spark': [14,14.5, 15,7.5,18,20,19,14], 'Scala': [15,10,11,9,10.5,18.5,16,16]}
-df_universites = pd.DataFrame(notes, columns = ['Région', 'Université', 'Nom', 'Spark', 'Scala'])
+notes = {'Région': ['Nouvelle-Aquitaine', 'Normandie', 'Normandie', 'Ile-de-France', 'Ile-de-France', 'Grand Est', 'Grand Est', 'Grand Est'],
+         'Université': ['Université de Bordeaux', 'Université de Rouen', 'Université de Rouen', 'Université de Paris', 'Université de Paris', 'Université de Strasbourg', 'Université de Strasbourg', 'Université de Strasbourg'],
+         'Nom': ['Sophie', 'Alex', 'Emma', 'Lucas', 'Sophie', 'Luc', 'Marc', 'Hugo'],
+         'Biologie': [14, 12, 15, 17, 18, 19, 20, 16],
+         'Chimie': [16, 13, 12, 14, 15, 18, 17, 15]}
+df_universites = pd.DataFrame(notes, columns=['Région', 'Université', 'Nom', 'Biologie', 'Chimie'])
 
 # Effectuez les opérations de groupage suivantes:
 # 1. Groupez les données par Région et affichez les groupes.
-# 2. Calculez la moyenne des notes en Scala et Spark pour chaque Université.
+# 2. Calculez la moyenne des notes en Chimie et Biologie pour chaque Université.
 # 3. Expérimentez avec d'autres opérations de groupage.
 
 # Affichez les résultats de manière claire et compréhensible.
@@ -49,7 +50,7 @@ df_universites = pd.DataFrame(notes, columns = ['Région', 'Université', 'Nom',
 
 <br>
 
-## Exercice 3: Opération de Concaténation
+### Exercice 3: Opération de Concaténation
 
 ---
 
@@ -59,8 +60,8 @@ Utilisez deux DataFrames `df1` et `df2` pour effectuer des opérations de concat
 import pandas as pd
 
 # DataFrames à utiliser
-df1 = pd.DataFrame({'Nom': ['Gilles', 'Sylvain'], 'Age': [25, 28]})
-df2 = pd.DataFrame({'Profession': ['Etudiant', 'Entrepreneur'], 'Statut Matrimonial': ['Célibataire', 'Marié']})
+df1 = pd.DataFrame({'Nom': ['Sophie', 'Lucas'], 'Age': [25, 28]})
+df2 = pd.DataFrame({'Profession': ['Étudiant', 'Ingénieur'], 'Statut Matrimonial': ['Célibataire', 'Marié']})
 
 # Effectuez les opérations de concaténation suivantes:
 # 1. Concaténez les DataFrames verticalement.
