--- a/f. Anaconda/Exercices/9. Lecture de Fichiers avec Pandas.md
+++ b/f. Anaconda/Exercices/9. Lecture de Fichiers avec Pandas.md
@@ -1,4 +1,4 @@
-## Exercice 1: Lecture de Fichier CSV
+### Exercice 1: Lecture de Fichier CSV
 
 ---
 
@@ -18,7 +18,7 @@ Tablette,15,300
 
 <br>
 
-## Exercice 2: Lecture de Fichier Excel
+### Exercice 2: Lecture de Fichier Excel
 
 ---
 
@@ -26,11 +26,11 @@ Considérez le fichier Excel suivant contenant des informations sur les employé
 
 | ID | Nom      | Poste          | Salaire |
 |----|----------|----------------|---------|
-| 1  | Alice    | Développeur     | 70000   |
-| 2  | Bob      | Analyste        | 60000   |
-| 3  | Charlie  | Chef de Projet  | 90000   |
-| 4  | David    | Ingénieur QA    | 65000   |
-| 5  | Eva      | Designer        | 75000   |
+| 1  | Alice    | Développeur     | 35000   |
+| 2  | Bob      | Analyste        | 30000   |
+| 3  | Charlie  | Chef de Projet  | 45000   |
+| 4  | David    | Ingénieur QA    | 32500   |
+| 5  | Eva      | Designer        | 37500   |
 
 1. Utilisez Pandas pour lire les données de la feuille Excel appelée "Employés" et stockez-les dans un DataFrame appelé `df_employes`.
 2. Affichez le DataFrame `df_employes`.
@@ -38,7 +38,7 @@ Considérez le fichier Excel suivant contenant des informations sur les employé
 
 <br>
 
-## Exercice 3: Exploration de Données Excel
+### Exercice 3: Exploration de Données Excel
 
 ---
 
